--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
                 <button id="dashboard" class="btn btn-outline-info btn-sm mr-2">Dashboard</button>   
                 <button id="logout" class="btn btn-outline-danger btn-sm">Logout</button>   
                 {{else}}
-                <button id="logout" class="btn btn-outline-success btn-sm">Login</button>
+                <button id="login" class="btn btn-outline-success btn-sm">Login</button>
                 {{/if}}
             </nav>
             <div class="mt-3 p-1">
@@ -43,5 +43,6 @@
         {{#if loggedIn}}
         <script src="/javascript/logout.js"></script>
         {{/if}}
+        <script src="/javascript/buttonhandlers.js"></script>
 </body>
 </html>
