--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="bg-secondary">
 <!-- Container for Grid-->
   <div class="container-fluid">
       <!--Row for Navigation Bar-->
@@ -23,10 +23,12 @@
                 <button id="login" class="btn btn-outline-success btn-sm">Login</button>
                 {{/if}}
             </nav>
-            <div class="mt-3 p-1">
-                <h1 class="text-info text-center">
-                    uBlog It
-                </h1>
+            <div class="col-12 mt-3">
+              <h1 class="text-info">
+                  uBlog It
+              </h1>
+            </div>
+
             </div>
           </header>
         </div>
@@ -35,13 +37,14 @@
             {{{body}}}
         </div>
         <!--Section for Footer-->
-        <div class="row bg-dark pt-4 pb-3 pr-4-pl-4 justify-content-center">
+        <div class="row bg-dark mt-3 pt-4 pb-3 pr-4-pl-4 align-self-end justify-content-center">
             <Footer>
                 <p class="text-info">Thank you for your cooperation.</p>
             </Footer>
         </div>
         {{#if loggedIn}}
         <script src="/javascript/logout.js"></script>
+        <script src="/javascript/loggedinbuttons.js"></script>
         {{/if}}
         <script src="/javascript/buttonhandlers.js"></script>
 </body>
