--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,11 +1,12 @@
-<form class="login-form m-3">
+<div class="col-lg-6 col-sm-12">
+<form class="login-form m-3 ml-5">
     <h2>Returning Users</h2>
-    <div class="form-group">
-        <label for="username-login">Username:</label>
+    <div class="form-group w-25">
+        <label for="username-login">Username</label>
         <input type="text" id="username-login" />
     </div>
-    <div class="form-group">
-        <label for="password-login">Password:</label>
+    <div class="form-group w-25">
+        <label for="password-login">Password</label>
         <input type="password" id="password-login" />
     </div>
   <div>
@@ -14,20 +15,23 @@
     <button type="submit" class="btn btn-success">Login</button>
   </div>
 </form>
+</div>
 
+<div class="col-md-6 col-sm-12">
 <form class="signup-form m-3 ml-5">
     <h2>New Members</h2>
-  <div class="form-group">
-    <label for="username-signup">Username:</label>
+  <div class="form-group w-25">
+    <label for="username-signup">Username</label>
     <input type="text" id="username-signup" />
   </div>
-  <div class="form-group">
-    <label for="password-signup">Password:</label>
+  <div class="form-group w-25">
+    <label for="password-signup">Password</label>
     <input type="password" id="password-signup" />
   </div>
   <div class="form-group">
     <button type="submit" class="btn btn-success">Signup</button>
   </div>
 </form>
+</div>
 
 <script src="/javascript/login.js"></script>
