--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,21 +1,22 @@
 {{> post-info post}}
 
-{{#if loggedIn}}
-<form class="comment-form">
-  <div>
-    <textarea name="comment-body"></textarea>
-  </div>
-
-  <div>
-    <button type="submit">Add Comment</button>
-    <button type="button" class="upvote-btn">Upvote</button>
-  </div>
-</form>
-{{/if}}
-
 {{> comments post.comments}}
 
 {{#if loggedIn}}
-<script src="/javascript/comment.js"></script>
-<script src="/javascript/upvote.js"></script>
+<div class="row w-100 mb-2 pl-2 justify-content-center">
+<form class="comment-form bg-dark pt-3 pl-3 pr-3 border border-dark rounded col-6">
+  <div class="form-group">
+    <textarea name="comment-body" class="form-control" cols="100"></textarea>
+  </div>
+
+  <div class="form-group">
+    <button type="submit" class="btn btn-outline-info" id="add-comment">Add Comment</button>
+  </div>
+</form>
+</div>
 {{/if}}
+
+{{#if loggedIn}}
+<script src="/javascript/comment.js"></script>
+{{/if}}
+<script src="/javascript/buttonhandlers.js"></script>
